--- a/css/index.css
+++ b/css/index.css
@@ -94,6 +94,104 @@
   }
 }
 
+/* footer CSS */
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #f8f9fa;
+  box-shadow: 0px -2px 15px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  margin-bottom: -40px;
+}
+
+.footer-content {
+  text-align: center;
+}
+
+.footer-links {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-links a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
+  color: black;
+  transition: color 0.3s;
+}
+
+.footer-links a:hover {
+  color: gray;
+}
+
+.footer-info {
+  font-size: 12px;
+  color: gray;
+}
+
+.footer-icon {
+  width: 25px;
+  height: 25px;
+}
+
+.footer-top p,
+.footer-bottom p {
+  color: #a9a9a9;
+}
+/* Header CSS */
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  background-color: white;
+  padding: 15px 30px;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+  position: fixed;
+  top: 0;
+  color: black;
+}
+
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 40px;
+  width: calc(100% - 60px);
+  padding: 0 300px;
+}
+
+.navbar-brand {
+  display: flex;
+  align-items: center;
+}
+
+.navbar-nav {
+  display: flex;
+  gap: 20px;
+  justify-content: flex-end;
+  flex-grow: 1;
+}
+
+.nav-link {
+  text-decoration: none;
+  color: black;
+  font-family: "font", sans-serif;
+  font-size: 22px;
+  transition: color 0.3s;
+}
+
+.nav-link:hover {
+  color: gray;
+}
+
 body {
   margin: 40px 0;
   font-family: "Raleway";
@@ -108,7 +206,7 @@ body {
 .headtime {
   z-index: 50;
   position: fixed !important;
-  width: 100%;
+  width: 30%;
   background: rgba(58, 224, 100, 0.544);
   text-align: center;
 }
@@ -441,4 +539,8 @@ img {
 }
 a:hover img {
   filter: none;
+}
+
+.menu-a {
+  cursor: pointer;
 }
