--- a/css/index.css
+++ b/css/index.css
@@ -203,13 +203,16 @@ body {
   transform: translate3d(10, 20, 20);
   background: linear-gradient(45deg, #f1f4f4 10%, #e7f0f777 90%);
 }
+
 .headtime {
   z-index: 50;
   position: fixed !important;
   width: 30%;
   background: rgba(58, 224, 100, 0.544);
   text-align: center;
+  margin-left: 350px;
 }
+
 .profile {
   text-align: center;
   opacity: 0;
