--- a/css/index.css
+++ b/css/index.css
@@ -147,6 +147,8 @@
 /* Header CSS */
 .header {
   display: flex;
+  font-family: "Raleway";
+  font-size: "22px";
   align-items: center;
   justify-content: space-between;
   width: 100%;
@@ -183,9 +185,10 @@
 .nav-link {
   text-decoration: none;
   color: black;
-  font-family: "font", sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 22px;
   transition: color 0.3s;
+  font-weight: bolder;
 }
 
 .nav-link:hover {
