--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,106 @@
+
+
+/* footer CSS */
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #f8f9fa;
+  box-shadow: 0px -2px 15px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  margin-bottom: -40px;
+}
+
+.footer-content {
+  text-align: center;
+}
+
+.footer-links {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-links a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
+  color: black;
+  transition: color 0.3s;
+}
+
+.footer-links a:hover {
+  color: gray;
+}
+
+.footer-info {
+  font-size: 12px;
+  color: gray;
+}
+
+.footer-icon {
+  width: 25px;
+  height: 25px;
+}
+
+.footer-top p,
+.footer-bottom p {
+  color: #a9a9a9;
+}
+/* Header CSS */
+.header {
+  display: flex;
+  font-family: "Raleway";
+  font-size: "22px";
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  background-color: white;
+  padding: 15px 30px;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+  position: fixed;
+  top: 0;
+  color: black;
+}
+
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 40px;
+  width: calc(100% - 60px);
+  padding: 0 300px;
+}
+
+.navbar-brand {
+  display: flex;
+  align-items: center;
+}
+
+.navbar-nav {
+  display: flex;
+  gap: 20px;
+  justify-content: flex-end;
+  flex-grow: 1;
+}
+
+.nav-link {
+  text-decoration: none;
+  color: black;
+  font-family: "Raleway", sans-serif;
+  font-size: 22px;
+  transition: color 0.3s;
+  font-weight: bolder;
+}
+
+.nav-link:hover {
+  color: gray;
+}
+
 @-webkit-keyframes NO {
   from,
   to {
@@ -93,7 +196,6 @@
     background-position: 0 0;
   }
 }
-
 
 body {
   margin: 40px 0;
@@ -342,20 +444,6 @@ body {
   margin-right: 5%;
 }
 
-::-webkit-scrollbar {
-  width: 1px;
-  height: 1px;
-}
-
-::-webkit-scrollbar-button {
-  width: 1px;
-  height: 1px;
-}
-.external {
-  overflow: hidden;
-  height: 100vh;
-}
-
 .horizontal-scroll-wrapper {
   display: flex;
   flex-direction: column;
@@ -370,81 +458,6 @@ body {
   perspective: 1px;
   transform-style: preserve-3d;
   padding-bottom: 10rem;
-}
-
-.img-wrapper {
-  transform: rotate(90deg);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 40vh;
-  transform-origin: 50% 50%;
-  transform: rotate(90deg) translateZ(0.1px) scale(0.9) translateX(0px)
-    translateY(-3vh);
-  transition: 1s;
-}
-
-.img-wrapper:hover {
-  min-height: 65vh;
-}
-
-.slower {
-  transform: rotate(90deg) translateZ(-0.2px) scale(1.1) translateX(0%)
-    translateY(-10vh);
-}
-.slower1 {
-  transform: rotate(90deg) translateZ(-0.25px) scale(1.05) translateX(0%)
-    translateY(8vh);
-}
-.slower2 {
-  transform: rotate(90deg) translateZ(-0.3px) scale(1.3) translateX(0%)
-    translateY(2vh);
-}
-.slower-down {
-  transform: rotate(90deg) translateZ(-0.2px) scale(1.1) translateX(0%)
-    translateY(16vh);
-}
-.faster {
-  transform: rotate(90deg) translateZ(0.15px) scale(0.8) translateX(0%)
-    translateY(14vh);
-}
-.faster1 {
-  transform: rotate(90deg) translateZ(0.05px) scale(0.8) translateX(0%)
-    translateY(10vh);
-}
-.fastest {
-  transform: rotate(90deg) translateZ(0.22px) scale(0.7) translateX(-10vh)
-    translateY(-15vh);
-}
-.vertical {
-  transform: rotate(90deg) translateZ(-0.15px) scale(1.15) translateX(0%)
-    translateY(0%);
-}
-.last {
-  transform: rotate(90deg) translateZ(-0.2px) scale(1.1) translateX(25vh)
-    translateY(-8vh);
-}
-.scroll-info,
-header {
-  position: absolute;
-  left: 1rem;
-}
-
-header {
-  bottom: 1rem;
-}
-.scroll-info {
-  top: 1rem;
-}
-
-img {
-  max-width: 25vw;
-  max-height: 25vh;
-  transition: 0.5s;
-  vertical-align: top;
-}
-a:hover img {
-  filter: none;
 }
 
 .menu-a {
