--- a/css/index.css
+++ b/css/index.css
@@ -145,7 +145,7 @@
   color: #a9a9a9;
 }
 /* Header CSS */
-.header {
+.nav-header {
   display: flex;
   font-family: "Raleway";
   font-size: "22px";
