--- a/css/header.css
+++ b/css/header.css
@@ -1,9 +1,9 @@
 @font-face {
-    font-family: 'Dovemayo_gothic';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2302@1.1/Dovemayo_gothic.woff2') format('woff2');
+    font-family: 'ImcreSoojin';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.3/ImcreSoojin.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-  }
+}
   
   .header {
     display: flex;
@@ -43,7 +43,7 @@
   .nav-link {
     text-decoration: none;
     color: black;
-    font-family: 'Dovemayo_gothic', sans-serif;
+    font-family: 'ImcreSoojin', sans-serif;
     font-size: 22px;
     transition: color 0.3s;
   }
