--- a/css/header.css
+++ b/css/header.css
@@ -83,3 +83,45 @@
     color: gray;
   }
   
+  
+  #header4 {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    background-color: white;
+    padding: 15px 30px;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    z-index: 1;
+    position: fixed;
+    top: 0;
+    font-family: 'Dovemayo_gothic', sans-serif;
+}
+
+#navbar-nav{
+  font-size: 23px; 
+  text-decoration: none; 
+  color: black;
+}
+
+#navbar.container.navbar-dark {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 40px;
+    width: calc(100% - 60px);
+    padding: 0 100px;
+}
+
+#navbar-brand {
+  display: flex;
+  align-items: center;
+}
+
+#navbar-nav {
+  display: flex;
+  gap: 20px;
+  justify-content: flex-end;
+  flex-grow: 1;
+}
+
